Création d'un crud pour les Labels + Mise en place d'un formualire imbriqué et de swup pour les transitions.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,13 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
+    <body
+    {{ stimulus_controller('symfony/ux-swup/swup', {
+        containers: ['#swup']
+    }) }}
+    >
+    <div id='swup'>
         {% block body %}{% endblock %}
+    </div>
     </body>
 </html>
