--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    background-color: skyblue;
+@layer base {
+    form {
+        @apply max-w-screen-sm mx-auto;
+    }
+    input, textarea , select {
+        @apply w-full p-2 mb-4 border-2 rounded-md border-slate-400;
+    }
+    input[type="checkbox"] {
+        @apply w-4 h-4 ml-2 w-fit;
+    }
+    button {
+        @apply px-4 py-2 border-2 rounded-md bg-slate-50 hover:bg-slate-300 border-slate-400;
+    }
 }
